# quick-segment

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  requirements.txt  setup.cfg
qs/: interpolation.py  math.py  popups.py  resources.py  resources.qrc
qs/apps/: quick_segment.py  segmentation.py  tutorial.py  volume_point_warp.py  volume_warp.py  volume_warp_grid.py  volume_warp_line.py
qs/data/: __init__.py  vcps.py  volume.py
