[metadata]
name = Quick Segment
version = 1.0.0
author = Sydney Chapman, Bruno Athie Teruel
author_email = c.seth.parker@uky.edu
description = Quick volume segmenter for Volume Cartographer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/educelab/quick-segment
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.9

[options.packages.find]
include = qs*
exclude = test

[options.entry_points]
console_scripts =
    quick-segment = qs.apps.quick_segment:main
